--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -7,10 +7,11 @@ import { HomePage } from 'vocs/components'
 <HomePage.Root>
   <HomePage.Logo />
   <HomePage.Tagline>Build whatever with Celestia underneath ✨</HomePage.Tagline>
-  <HomePage.InstallPackage name="hello" type="install" />
-  <HomePage.Description>Go from light nodes to rollups at your own pace.</HomePage.Description>
+  ```bash
+  celestia light start
+  ```
+  <HomePage.Description>From smart contracts to building customized rollups, at your own pace.</HomePage.Description>
   <HomePage.Buttons>
-    <HomePage.Button href="/build-whatever" variant="accent">Build whatever</HomePage.Button>
-    <HomePage.Button href="https://github.com/celestiaorg/academy">GitHub</HomePage.Button>
+    <HomePage.Button href="/build-whatever" variant="accent">Start building</HomePage.Button>
   </HomePage.Buttons>
 </HomePage.Root>
