--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -8,7 +8,7 @@ import { Button } from 'vocs/components'
 :::tip
 Modular Academy is under construction. You got here early! 🚧
 
-![nice lol](https://media1.tenor.com/m/PLL_Hgq-ezsAAAAd/american-psycho-impressive.gif)
+{/* ![nice lol](https://media1.tenor.com/m/PLL_Hgq-ezsAAAAd/american-psycho-impressive.gif) */}
 :::
 
 ## Smart contracts on rollups
@@ -18,15 +18,13 @@ you've come to the right place! In the first part of Modular Academy,
 we'll learn about the different types of smart contracts you can deploy
 on a rollup.
 
-We'll start by learning how to deploy an ERC-721 smart contract on a rollup
-with a verifiable random function (VRF). Then we'll learn how to mint
+We'll start by learning how to deploy an ERC-721 smart contract on a rollup. Then we'll learn how to mint
 an ERC-1155 on the rollup by using our ERC-721 as a prerequisite for minting.
 
-Get started with [Module 1](/modules/1/introduction-to-module-1). This will show you how to
-create an ERC-721 smart contract on Bubs testnet
-with a VRF.
+Get started with Module 1. This will show you how to
+create an ERC-721 smart contract on Bubs testnet.
 
-<Button href="/modules/1/introduction-to-module-1">Module 1</Button>
+<Button href="/modules/1/introduction" variant="accent">Module 1: Raspberry NFT</Button>
 
 ## Building a custom rollup framework
 
