--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -7,11 +7,14 @@ import { HomePage } from 'vocs/components'
 <HomePage.Root>
   <HomePage.Logo />
   <HomePage.Tagline>Build whatever with Celestia underneath ✨</HomePage.Tagline>
+  
   ```bash
   celestia light start
   ```
   <HomePage.Description>From smart contracts to building customized rollups, at your own pace.</HomePage.Description>
   <HomePage.Buttons>
-    <HomePage.Button href="/build-whatever" variant="accent">Start building</HomePage.Button>
+    <HomePage.Button href="/build-whatever" variant="accent">Get started</HomePage.Button>
   </HomePage.Buttons>
 </HomePage.Root>
+
+::sponsors
