--- a/docs/pages/modules/1/introduction.mdx
+++ b/docs/pages/modules/1/introduction.mdx
@@ -1,8 +1,8 @@
 # Introduction to Module 1
 
-## Building a smart contract with verifiable randomness
+## Deploying a smart contract to an EVM rollup
 
-Welcome to the world of rollups! If you're an Ethereum Virtual Machine (EVM) developer, you might wonder how building on a rollup, like [OP Celestia Raspberry testnet](https://raas.gelato.network/rollups/details/public/op-celestia-testnet), compares to traditional blockchains. The truth is, the experience is designed to be seamless.
+Welcome to the world of rollups! If you're an Ethereum Virtual Machine (EVM) developer, you might wonder how building on a rollup, like [OP Celestia Raspberry testnet](https://raas.gelato.network/rollups/details/public/op-celestia-testnet), compares to traditional blockchains. The truth is, the experience is designed to be the same.
 
 ## What is a rollup?
 
@@ -20,14 +20,15 @@ Where's the proof? [Syndicate's Frame Chain](https://warpcast.com/will/0x66826dd
 
 ![frame chain](/module_1/frame_chain.png)
 
+{/* 
 ## Integrating verifiable randomness
 
 In the first module, we'll explore integrating a verifiable random function (VRF) with a smart contract on our rollup. VRFs provide a secure and verifiable way to generate randomness, essential for many decentralized applications. For instance, a gaming app would use a VRF to ensure fair and unpredictable outcomes.
 
-We'll use a drand-based VRF solution compatible with the EVM. This allows us to incorporate secure randomness directly into our smart contracts with familiar EVM opcodes.
+We'll use a drand-based VRF solution compatible with the EVM. This allows us to incorporate secure randomness directly into our smart contracts with familiar EVM opcodes. */}
 
 ## Ready to ship?
 
-Building on a rollup like the Raspberry testnet offers a familiar yet enhanced development experience for EVM developers. By following this tutorial, you'll learn how to deploy ERC-721 smart contract and integrate a VRF solution, all while enjoying the benefits of rollup technology.
+Building on a rollup like the Raspberry testnet offers a familiar yet enhanced development experience for EVM developers. By following this tutorial, you'll learn how to deploy ERC-721 smart contract with no code, all while enjoying the benefits of rollup technology.
 
 Ready to start building? Let's embark on this journey together and unlock the potential of rollups for your next project.
