--- a/docs/pages/modules/1/minting.mdx
+++ b/docs/pages/modules/1/minting.mdx
@@ -1,1 +1,15 @@
 # Mint your NFT on the Raspberry rollup
+
+import { Button } from 'vocs/components'
+
+## Post about it
+
+Congratulations 🎉 you've minted an ERC-721 NFT on your rollup!
+
+<Button href="https://twitter.com/intent/tweet?text=I just finished module 1 of Modular Academy! Check out my NFT" variant="accent" target="_blank">post a tweet with a picture of your NFT in your wallet</Button>
+
+## Next steps
+
+[Submit your tweet link here with your EVM address](https://forms.gle/p4MNauxsz6ijnfjR8) and we'll send you an NFT as a momento of finishing your first module on your journey in the Modular Academy.
+
+Then head back to the [modules page](/build-whatever) to continue your journey through the Modular Academy. 
