feat: module 1 more

--- a/docs/pages/modules/1/raspberry.mdx
+++ b/docs/pages/modules/1/raspberry.mdx
@@ -16,6 +16,6 @@ In order to deploy your first contract, you'll need some testnet ETH. You can ge
 
 Copy your address and paste it into the [Raspberry explorer](https://blockscout.op-celestia-testnet.gelato.digital/) to see your balance.
 
-## Ready to write a contract
+## Ready to deploy a contract
 
-Now you're ready to write your first contract on Raspberry testnet. Let's get started!
+Now you're ready to deploy your first contract on Raspberry testnet. Let's get started!
