--- a/docs/pages/modules/1/thirdweb.mdx
+++ b/docs/pages/modules/1/thirdweb.mdx
@@ -1,3 +1,15 @@
 # Deploying your contract with thirdweb
 
-In this module, we'll learn how to deploy a smart contract on thirdweb. We'll start by deploying an ERC-721 smart contract on thirdweb.
+In this page, we'll learn how to deploy a smart contract on thirdweb. We'll start by deploying an ERC-721 smart contract on thirdweb.
+
+## Go to thirdweb.com
+
+Visit [thirdweb](https://thirdweb.com/dashboard).
+
+## Connect your wallet
+
+Connect your wallet to thirdweb.
+
+![connect wallet](/module_1/connect.png)
+
+## Pick the contract to deploy
