feat: finish module 1

--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -21,10 +21,10 @@ on a rollup.
 We'll start by learning how to deploy an ERC-721 smart contract on a rollup. Then we'll learn how to mint
 an ERC-1155 on the rollup by using our ERC-721 as a prerequisite for minting.
 
-Get started with Module 1. This will show you how to
+Get started with module 1. This will show you how to
 create an ERC-721 smart contract on Bubs testnet.
 
-<Button href="/modules/1/introduction" variant="accent">Module 1: Raspberry NFT</Button>
+<Button href="/modules/1/introduction" variant="accent">module 1: Raspberry NFT</Button>
 
 ## Building a custom rollup framework
 
