--- a/docs/pages/modules/1/raspberry.mdx
+++ b/docs/pages/modules/1/raspberry.mdx
@@ -3,19 +3,36 @@
 ## Install MetaMask
 
 First, install [download MetaMask](https://metamask.io/download) if you don't have it already.
+Follow the instructions to set up your wallet and do not share your mnemonic with anyone. This mnemonic (a.k.a. recovery phrase) is the key to your wallet and should be kept secret.
 
-## Add Raspberry to your wallet
+## Add OP Celestia Raspberry to your wallet
 
-Now you can add Raspberry testnet as a chain in MetaMask from [the Raspberry testnet page](https://raas.gelato.network/rollups/details/public/op-celestia-testnet).
+Now you can add OP Celestia Raspberry testnet as a chain in MetaMask from [the OP Celestia Raspberry testnet page](https://raas.gelato.network/rollups/details/public/op-celestia-testnet).
 
-## Get testnet Raspberry ETH
+![add network](/module_1/add-network.png)
 
-In order to deploy your first contract, you'll need some testnet ETH. You can get testnet ETH by clicking "Request Faucet Funds on Raspberry rollup" on the Raspberry testnet page. Just copy and paste your wallet address from MetaMask and request funds!
+## Get testnet OP Celestia Raspberry ETH
 
-## Check the explorer for your ETH
+In order to deploy your first contract, you'll need some testnet ETH. Visit a Sepolia faucet (like [this one](https://www.alchemy.com/faucets/ethereum-sepolia)) to obtain some Sepolia ETH. Use [the bridge on the OP Celestia Raspberry testnet page](https://bridge.gelato.network/bridge/opcelestia-raspberry) to then bridge your Sepolia ETH to the OP Celestia Raspberry testnet.
 
-Copy your address and paste it into the [Raspberry explorer](https://blockscout.op-celestia-testnet.gelato.digital/) to see your balance.
+![bridge](/module_1/bridge.png)
+
+This process should only take a few minutes. Once you're done, you should see your OP Celestia Raspberry ETH in your MetaMask wallet.
+
+![bridge confirm](/module_1/bridge-confirm.png)
+
+Click "View balance on L2" to see your balance on [the OP Celestia Raspberry testnet explorer](https://blockscout.op-celestia-testnet.gelato.digital/).
+
+![balance](/module_1/balance.png)
+
+You can also see your balance in your wallet.
+
+![wallet balance](/module_1/wallet-balance.png)
+
+You can also see your deposits history from the bridge UI.
+
+![deposits](/module_1/deposits.png)
 
 ## Ready to deploy a contract
 
-Now you're ready to deploy your first contract on Raspberry testnet. Let's get started!
+Now you're ready to deploy your first contract on Raspberry testnet. Let's head to the next step!
