--- a/docs/pages/modules/1/introduction.mdx
+++ b/docs/pages/modules/1/introduction.mdx
@@ -18,7 +18,7 @@ Deploying an ERC-721 on a rollup is very similar to deploying on Ethereum. Howev
 
 Where's the proof? [Syndicate's Frame Chain](https://warpcast.com/will/0x66826dd0) allows for just 0.01 ETH to cover many millions of transactions.
 
-![frame chain](module_1/frame_chain.png)
+![frame chain](/module_1/frame_chain.png)
 
 {/* 
 ## Integrating verifiable randomness
