fix: just make it work w vercel

--- a/docs/pages/modules/1/minting.mdx
+++ b/docs/pages/modules/1/minting.mdx
@@ -27,16 +27,16 @@ https://embed.ipfscdn.io/ipfs/bafybeicd3qfzelz4su7ng6n523virdsgobrc5pcbarhwqv3dj
 
 Click the mint button to mint your NFT for free.
 
-![mint](module_1/mint.png)
+![mint](/module_1/mint.png)
 
 Nice! You've minted an ERC-721 NFT on a rollup!
 
-![success](module_1/success.png)
+![success](/module_1/success.png)
 
 ## Add the contract to your wallet
 
 Find the contract address in the thirdweb dashboard and add it using "Import NFT" in MetaMask.
 
-![nft-in-wallet](module_1/nft-in-wallet.png)
+![nft-in-wallet](/module_1/nft-in-wallet.png)
 
 You can also see it in [the NFTs tab in the thirdweb dashboard](https://thirdweb.com/op-celestia-rasberry/0x4b7585d88a9ac587D7DCa93b842Fa987704f0fe0/nfts/0).
