--- a/docs/pages/modules/1/raspberry.mdx
+++ b/docs/pages/modules/1/raspberry.mdx
@@ -9,29 +9,29 @@ Follow the instructions to set up your wallet and do not share your mnemonic wit
 
 Now you can add OP Celestia Raspberry testnet as a chain in MetaMask from [the OP Celestia Raspberry testnet page](https://raas.gelato.network/rollups/details/public/op-celestia-testnet).
 
-![add network](module_1/add-network.png)
+![add network](/module_1/add-network.png)
 
 ## Get testnet OP Celestia Raspberry ETH
 
 In order to deploy your first contract, you'll need some testnet ETH. Visit a Sepolia faucet (like [this one](https://www.alchemy.com/faucets/ethereum-sepolia)) to obtain some Sepolia ETH. Use [the bridge on the OP Celestia Raspberry testnet page](https://bridge.gelato.network/bridge/opcelestia-raspberry) to then bridge your Sepolia ETH to the OP Celestia Raspberry testnet.
 
-![bridge](module_1/bridge.png)
+![bridge](/module_1/bridge.png)
 
 This process should only take a few minutes. Once you're done, you should see your OP Celestia Raspberry ETH in your MetaMask wallet.
 
-![bridge confirm](module_1/bridge-confirm.png)
+![bridge confirm](/module_1/bridge-confirm.png)
 
 Click "View balance on L2" to see your balance on [the OP Celestia Raspberry testnet explorer](https://blockscout.op-celestia-testnet.gelato.digital/).
 
-![balance](module_1/balance.png)
+![balance](/module_1/balance.png)
 
 You can also see your balance in your wallet.
 
-![wallet balance](module_1/wallet-balance.png)
+![wallet balance](/module_1/wallet-balance.png)
 
 You can also see your deposits history from the bridge UI.
 
-![deposits](module_1/deposits.png)
+![deposits](/module_1/deposits.png)
 
 ## Ready to deploy a contract
 
