--- a/docs/pages/modules/1/thirdweb.mdx
+++ b/docs/pages/modules/1/thirdweb.mdx
@@ -10,29 +10,29 @@ Visit [the thirdweb dashboard](https://thirdweb.com/dashboard).
 
 Connect your wallet to thirdweb.
 
-![connect wallet](module_1/connect.png)
+![connect wallet](/module_1/connect.png)
 
 After you connect your wallet, you'll need to sign a message to confirm that you are the owner of the wallet. Click sign in.
 
-![sign message](module_1/signature.png)
+![sign message](/module_1/signature.png)
 
 ## Pick the contract to deploy
 
 Click on the Deploy button on the dashboard.
 
-![deploy](module_1/deploy.png)
+![deploy](/module_1/deploy.png)
 
 This will take you to a page where you can pick the contract you want to deploy. Click "Ready-to-deploy".
 
-![pick contract](module_1/pick-contract.png)
+![pick contract](/module_1/pick-contract.png)
 
 Then click "NFT Drop" where you'll deploy an ERC-721 smart contract and mint your own token.
 
-![nft-contract](module_1/nft-contract.png)
+![nft-contract](/module_1/nft-contract.png)
 
 Read the contract page to understand more about the contract you're deploying.
 
-![contract page](module_1/contract-page.png)
+![contract page](/module_1/contract-page.png)
 
 ## Deploy the contract
 
@@ -43,7 +43,7 @@ Fill in the details for your contract. We'll leave this exercise to you to compl
 :::tip
 Make sure you're deploying to OP Celestia Raspberry in thirdweb.
 
-![select-right-chain](module_1/select-right-chain.png)
+![select-right-chain](/module_1/select-right-chain.png)
 :::
 
 You'll have 3 transactions to confirm. Confirm them all.
@@ -58,7 +58,7 @@ For module 1, we'll do a "Single Upload" and upload one image. After you've uplo
 
 After you've uploaded your NFT, your dashboard will look similar to this:
 
-![nft-uploaded](module_1/contract-with-nft.png)
+![nft-uploaded](/module_1/contract-with-nft.png)
 
 ## Set claim conditions
 
@@ -70,4 +70,4 @@ Again, play around with the settings if you'd like. When you're ready, click "Sa
 
 After your transaction goes through, you'll see a currently active claim phase for "Only Owner".
 
-![only-owner](module_1/only-owner.png)
+![only-owner](/module_1/only-owner.png)
