feat: add descriptions

--- a/docs/pages/modules/1/introduction.mdx
+++ b/docs/pages/modules/1/introduction.mdx
@@ -1,3 +1,7 @@
+---
+description: Deploy your first smart contract and mint an NFT.
+---
+
 # Introduction to module 1
 
 ## Deploying a smart contract to an EVM rollup
