--- a/docs/pages/modules/1/minting.mdx
+++ b/docs/pages/modules/1/minting.mdx
@@ -1,3 +1,7 @@
+---
+description: Minting an ERC-721 NFT on OP Celestia Raspberry.
+---
+
 # Mint your NFT on the Raspberry rollup
 
 Now is time to mint your NFT.
