--- a/docs/pages/modules/1/submit.mdx
+++ b/docs/pages/modules/1/submit.mdx
@@ -1,3 +1,7 @@
+---
+description: Congratulations! Now submit and share your work.
+---
+
 # Submit module 1
 
 import { Button } from 'vocs/components'
