--- a/docs/pages/modules/1/thirdweb.mdx
+++ b/docs/pages/modules/1/thirdweb.mdx
@@ -1,3 +1,7 @@
+---
+description: Deploy a smart contract with no code.
+---
+
 # Deploying your contract with thirdweb
 
 In this page, we'll learn how to deploy a smart contract on thirdweb with no code. We'll be deploying an ERC-721 smart contract.
