--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -22,7 +22,7 @@ We'll start by learning how to deploy an ERC-721 smart contract on a rollup. The
 an ERC-1155 on the rollup by using our ERC-721 as a prerequisite for minting.
 
 Get started with module 1. This will show you how to
-create an ERC-721 smart contract on Bubs testnet.
+create an ERC-721 smart contract on OP Celestia Raspberry testnet.
 
 <Button href="/modules/1/introduction" variant="accent">module 1: Raspberry NFT</Button>
 
