--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -24,7 +24,7 @@ an ERC-1155 on the rollup by using our ERC-721 as a prerequisite for minting.
 Get started with module 1. This will show you how to
 create an ERC-721 smart contract on OP Celestia Raspberry testnet.
 
-<Button href="/modules/1/introduction" variant="accent">module 1: Raspberry NFT</Button>
+<Button href="/modules/1/introduction" variant="accent">Module 1: Raspberry NFT</Button>
 
 ## Building a custom rollup framework
 
