feat: add homepage description and hide logo

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,5 +1,8 @@
 ---
 layout: landing
+showLogo: false
+title: Modular Academy - build whatever with Celestia underneath
+description: From smart contracts to building customized rollups, at your own pace.
 ---
 
 import { HomePage } from 'vocs/components'
