feat: hide sidebar on build-whatever

--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -1,5 +1,6 @@
 ---
 description: Advantages of building on modular blockchains like Celestia.
+showSidebar: false
 ---
 import { Button } from 'vocs/components'
 
