style: add todos for styling of build-whatver page

--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -1,6 +1,15 @@
 ---
 description: Advantages of building on modular blockchains like Celestia.
 showSidebar: false
+# TODO: This can be used to make this page more engaging. 
+# from https://vocs.dev/docs/api/frontmatter#content
+# content:
+#     width: 100%
+# TODO: use a different style for this page
+# `docs` - Documentation page layout (default).
+# `landing` - Landing page layout.
+# `minimal` - A minimal layout with no sidebar or header.
+layout: landing
 ---
 import { Button } from 'vocs/components'
 
