--- a/docs/pages/modules/1/submit.mdx
+++ b/docs/pages/modules/1/submit.mdx
@@ -12,7 +12,7 @@ Congratulations 🎉 you've just deployed a contract, and minted an ERC-721 NFT 
 
 Now, let's share your accomplishment with the world. Post a tweet with a screenshot of your NFT and a link to your thirdweb NFT dashboard.
 
-<Button href="https://twitter.com/intent/tweet?text=I just finished module 1 of Modular Academy! Check out my NFT" variant="accent" target="_blank">send tweet/xeet</Button>
+<Button href="https://twitter.com/intent/tweet?text=I just finished module 1 of Modular Academy! Check out my NFT" variant="accent" target="_blank">send tweet</Button>
 
 ## Submit your module
 
