docs: edit build-whatever

--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -19,6 +19,8 @@ import { Button } from 'vocs/components'
 Modular Academy is under construction. You got here early! 🚧
 
 {/* ![nice lol](https://media1.tenor.com/m/PLL_Hgq-ezsAAAAd/american-psycho-impressive.gif) */}
+:::success
+If you've finished module 1, we're working on more now for you to continue your journey. Stay tuned!
 :::
 
 ## Smart contracts on rollups
