--- a/docs/pages/modules/1/minting.mdx
+++ b/docs/pages/modules/1/minting.mdx
@@ -12,7 +12,7 @@ For the sake of this module, we'll be using the embed to mint the NFT directly i
 
 Find the embed tab on the sidebar under "Extensions" for your contract.
 
-It looks like this, but with your NFT.
+It looks like this, but with your NFT. Yours will probably say 0/1 minted.
 
 <iframe
     src="https://embed.ipfscdn.io/ipfs/bafybeicd3qfzelz4su7ng6n523virdsgobrc5pcbarhwqv3dj3drh645pi/?contract=0x4b7585d88a9ac587D7DCa93b842Fa987704f0fe0&chain=%7B%22name%22%3A%22OP+Celestia+Rasberry%22%2C%22chain%22%3A%22ETH%22%2C%22rpc%22%3A%5B%22https%3A%2F%2F123420111.rpc.thirdweb.com%2F%24%7BTHIRDWEB_API_KEY%7D%22%5D%2C%22nativeCurrency%22%3A%7B%22name%22%3A%22Ether%22%2C%22symbol%22%3A%22ETH%22%2C%22decimals%22%3A18%7D%2C%22shortName%22%3A%22opcelestia-rasberry%22%2C%22chainId%22%3A123420111%2C%22testnet%22%3Atrue%2C%22slug%22%3A%22op-celestia-rasberry%22%2C%22icon%22%3A%7B%22url%22%3A%22ipfs%3A%2F%2FQmQXw4QEDR4AbUwX9scH7aGhiSDhQRxu6LCQoUkgsYgGyK%2FGelato%2520brand%2520mark.png%22%2C%22width%22%3A300%2C%22height%22%3A300%2C%22format%22%3A%22png%22%7D%7D&clientId=b83e81cb25ecbd32cae52ca92aa73bfb&theme=system&primaryColor=purple"
