style: change font

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,7 +1,7 @@
 ---
 layout: landing
 showLogo: false
-title: Modular Academy - build whatever with Celestia underneath
+title: Modular Academy - Build whatever with Celestia underneath
 description: From smart contracts to building customized rollups, at your own pace.
 ---
 
