feat: edits from call

--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -1,5 +1,5 @@
 ---
-description: Advantages of building on modular blockchains like Celestia.
+description: advantages of building on modular blockchains like Celestia.
 showSidebar: false
 # TODO: This can be used to make this page more engaging. 
 # from https://vocs.dev/docs/api/frontmatter#content
@@ -13,35 +13,34 @@ layout: landing
 ---
 import { Button } from 'vocs/components'
 
-# Build whatever with Celestia underneath ✨
+# build whatever with Celestia underneath ✨
 
 :::tip
-Modular Academy is under construction. You got here early! 🚧
+modular academy is under construction. you got here early! 🚧
 
-{/* ![nice lol](https://media1.tenor.com/m/PLL_Hgq-ezsAAAAd/american-psycho-impressive.gif) */}
 :::success
-If you've finished module 1, we're working on more now for you to continue your journey. Stay tuned!
+if you've finished module 1, we're working on more now for you to continue your journey. stay tuned!
 :::
 
-## Smart contracts on rollups
+{/* ## submit a blob, become a rollup
 
-If you're a developer who wants to deploy a smart contract on a rollup,
-you've come to the right place! In the first part of Modular Academy,
-we'll learn about the different types of smart contracts you can deploy
-on a rollup.
+:::info
+module 0 is under construction. you got here early! meanwhile, check out module 1 🚧
 
-We'll start by learning how to deploy an ERC-721 smart contract on a rollup. Then we'll learn how to mint
-an ERC-1155 on the rollup by using our ERC-721 as a prerequisite for minting.
+<Button href="/modules/0/intro" variant="accent">module 0: submit a blob to Celestia</Button>
+::: */}
+
+## smart contracts on rollups
 
 Get started with module 1. This will show you how to
 create an ERC-721 smart contract on OP Celestia Raspberry testnet.
 
-<Button href="/modules/1/introduction" variant="accent">Module 1: Raspberry NFT</Button>
+<Button href="/modules/1/intro" variant="accent">module 1: Raspberry NFT</Button>
 
-## Building a custom rollup framework
+## building a custom rollup framework
 
 Coming soon™
 
-## Building your own RaaS setup with custom rollup framework
+## building your own RaaS setup with custom rollup framework
 
 Coming soon™
