--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,23 +1,17 @@
 ---
 layout: landing
 showLogo: false
-title: Modular Academy - Build whatever with Celestia underneath
-description: From smart contracts to building customized rollups, at your own pace.
+title: modular academy - build whatever with Celestia underneath
+description: from smart contracts to building customized rollups, at your own pace
 ---
 
 import { HomePage } from 'vocs/components'
 
 <HomePage.Root>
   <HomePage.Logo />
-  <HomePage.Tagline>Build whatever with Celestia underneath ✨</HomePage.Tagline>
-  
-  ```bash
-  celestia light start
-  ```
-  <HomePage.Description>From smart contracts to building customized rollups, at your own pace.</HomePage.Description>
+  <HomePage.Tagline>build whatever with Celestia underneath ✨</HomePage.Tagline>
+  <HomePage.Description>from smart contracts to building customized rollups, at your own pace</HomePage.Description>
   <HomePage.Buttons>
-    <HomePage.Button href="/build-whatever" variant="accent">Get started</HomePage.Button>
+    <HomePage.Button href="/build-whatever" variant="accent">get started</HomePage.Button>
   </HomePage.Buttons>
 </HomePage.Root>
-
-::sponsors
