--- a/docs/pages/modules/1/minting.mdx
+++ b/docs/pages/modules/1/minting.mdx
@@ -1,18 +1,20 @@
 ---
-description: Minting an ERC-721 NFT on OP Celestia Raspberry.
+description: minting an ERC-721 NFT on OP Celestia Raspberry.
 ---
 
-# Mint your NFT on the Raspberry rollup
+# mint your NFT on the Raspberry rollup
 
-Now is time to mint your NFT.
+now it's time to mint your NFT.
 
-For the sake of this module, we'll be using the embed to mint the NFT directly in the browser. Then we'll add it to your wallet so you can see it in the NFTs tab.
+for this module, we'll be using the embed to mint the NFT directly in the browser. then we'll add it to your wallet so you can see it in the NFTs tab.
 
-## Find your embed
+::::steps
 
-Find the embed tab on the sidebar under "Extensions" for your contract.
+## find your embed
 
-It looks like this, but with your NFT. Yours will probably say 0/1 minted.
+find the embed tab on the sidebar under "Extensions" for your contract.
+
+it looks like this, but with your NFT. yours will probably say 0/1 minted.
 
 <iframe
     src="https://embed.ipfscdn.io/ipfs/bafybeicd3qfzelz4su7ng6n523virdsgobrc5pcbarhwqv3dj3drh645pi/?contract=0x4b7585d88a9ac587D7DCa93b842Fa987704f0fe0&chain=%7B%22name%22%3A%22OP+Celestia+Rasberry%22%2C%22chain%22%3A%22ETH%22%2C%22rpc%22%3A%5B%22https%3A%2F%2F123420111.rpc.thirdweb.com%2F%24%7BTHIRDWEB_API_KEY%7D%22%5D%2C%22nativeCurrency%22%3A%7B%22name%22%3A%22Ether%22%2C%22symbol%22%3A%22ETH%22%2C%22decimals%22%3A18%7D%2C%22shortName%22%3A%22opcelestia-rasberry%22%2C%22chainId%22%3A123420111%2C%22testnet%22%3Atrue%2C%22slug%22%3A%22op-celestia-rasberry%22%2C%22icon%22%3A%7B%22url%22%3A%22ipfs%3A%2F%2FQmQXw4QEDR4AbUwX9scH7aGhiSDhQRxu6LCQoUkgsYgGyK%2FGelato%2520brand%2520mark.png%22%2C%22width%22%3A300%2C%22height%22%3A300%2C%22format%22%3A%22png%22%7D%7D&clientId=b83e81cb25ecbd32cae52ca92aa73bfb&theme=system&primaryColor=purple"
@@ -21,26 +23,28 @@ It looks like this, but with your NFT. Yours will probably say 0/1 minted.
     frameborder="0"
 ></iframe>
 
-Connect your wallet or, if you made it for someone else, set a different claim condition and send them the link. It'll look like this:
+connect your wallet or, if you made it for someone else, set a different claim condition and send them the link. it'll look like this:
 
 ```markdown
 https://embed.ipfscdn.io/ipfs/bafybeicd3qfzelz4su7ng6n523virdsgobrc5pcbarhwqv3dj3drh645pi/?contract=0x4b7585d88a9ac587D7DCa93b842Fa987704f0fe0&chain=%7B%22name%22%3A%22OP+Celestia+Rasberry%22%2C%22chain%22%3A%22ETH%22%2C%22rpc%22%3A%5B%22https%3A%2F%2F123420111.rpc.thirdweb.com%2F%24%7BTHIRDWEB_API_KEY%7D%22%5D%2C%22nativeCurrency%22%3A%7B%22name%22%3A%22Ether%22%2C%22symbol%22%3A%22ETH%22%2C%22decimals%22%3A18%7D%2C%22shortName%22%3A%22opcelestia-rasberry%22%2C%22chainId%22%3A123420111%2C%22testnet%22%3Atrue%2C%22slug%22%3A%22op-celestia-rasberry%22%2C%22icon%22%3A%7B%22url%22%3A%22ipfs%3A%2F%2FQmQXw4QEDR4AbUwX9scH7aGhiSDhQRxu6LCQoUkgsYgGyK%2FGelato%2520brand%2520mark.png%22%2C%22width%22%3A300%2C%22height%22%3A300%2C%22format%22%3A%22png%22%7D%7D&clientId=b83e81cb25ecbd32cae52ca92aa73bfb&theme=system&primaryColor=purple
 ```
 
-## Mint the NFT
+## mint the NFT
 
-Click the mint button to mint your NFT for free.
+click the mint button to mint your NFT for free.
 
 ![mint](/module_1/mint.png)
 
-Nice! You've minted an ERC-721 NFT on a rollup!
+nice! you've minted an ERC-721 NFT on a rollup!
 
 ![success](/module_1/success.png)
 
-## Add the contract to your wallet
+## add the contract to your wallet
 
-Find the contract address in the thirdweb dashboard and add it using "Import NFT" in MetaMask.
+find the contract address in the thirdweb dashboard and add it using "Import NFT" in MetaMask.
 
 ![nft-in-wallet](/module_1/nft-in-wallet.png)
 
-You can also see it in [the NFTs tab in the thirdweb dashboard](https://thirdweb.com/op-celestia-rasberry/0x4b7585d88a9ac587D7DCa93b842Fa987704f0fe0/nfts/0).
+you can also see it in [the NFTs tab in the thirdweb dashboard](https://thirdweb.com/op-celestia-rasberry/0x4b7585d88a9ac587D7DCa93b842Fa987704f0fe0/nfts/0)
+
+::::
