--- a/docs/pages/modules/1/raspberry.mdx
+++ b/docs/pages/modules/1/raspberry.mdx
@@ -1,42 +1,45 @@
 ---
-description: Setting up your wallet with Raspberry testnet.
+description: setting up your wallet with OP Celestia Raspberry testnet.
 ---
 
-# Getting set up with Raspberry
+# getting set up with Raspberry
 
-## Install MetaMask
+::::steps
+## install MetaMask
 
-First, install [download MetaMask](https://metamask.io/download) if you don't have it already.
-Follow the instructions to set up your wallet and do not share your mnemonic with anyone. This mnemonic (a.k.a. recovery phrase) is the key to your wallet and should be kept secret.
+first, install [download MetaMask](https://metamask.io/download) if you don't have it already.
+follow the instructions to set up your wallet and do not share your mnemonic with anyone. this mnemonic (a.k.a. recovery phrase) is the key to your wallet and should always be kept secret.
 
-## Add OP Celestia Raspberry to your wallet
+## add OP Celestia Raspberry to your wallet
 
-Now you can add OP Celestia Raspberry testnet as a chain in MetaMask from [the OP Celestia Raspberry testnet page](https://raas.gelato.network/rollups/details/public/op-celestia-testnet).
+now you can add OP Celestia Raspberry testnet as a chain in MetaMask from [the OP Celestia Raspberry testnet page](https://raas.gelato.network/rollups/details/public/op-celestia-testnet)
 
 ![add network](/module_1/add-network.png)
 
-## Get testnet OP Celestia Raspberry ETH
+## get testnet OP Celestia Raspberry ETH
 
-In order to deploy your first contract, you'll need some testnet ETH. Visit a Sepolia faucet (like [this one](https://www.alchemy.com/faucets/ethereum-sepolia)) to obtain some Sepolia ETH. Use [the bridge on the OP Celestia Raspberry testnet page](https://bridge.gelato.network/bridge/opcelestia-raspberry) to then bridge your Sepolia ETH to the OP Celestia Raspberry testnet.
+in order to deploy your first contract, you'll need some testnet ETH. Visit a Sepolia faucet (like [this one](https://www.alchemy.com/faucets/ethereum-sepolia)) to obtain some Sepolia ETH. Use [the bridge on the OP Celestia Raspberry testnet page](https://bridge.gelato.network/bridge/opcelestia-raspberry) to then bridge your Sepolia ETH to the OP Celestia Raspberry testnet.
 
 ![bridge](/module_1/bridge.png)
 
-This process should only take a few minutes. Once you're done, you should see your OP Celestia Raspberry ETH in your MetaMask wallet.
+this process should only take a few minutes. once you're done, you should see your OP Celestia Raspberry ETH in your MetaMask wallet.
 
 ![bridge confirm](/module_1/bridge-confirm.png)
 
-Click "View balance on L2" to see your balance on [the OP Celestia Raspberry testnet explorer](https://blockscout.op-celestia-testnet.gelato.digital/).
+click "View balance on L2" to see your balance on [the OP Celestia Raspberry testnet explorer](https://blockscout.op-celestia-testnet.gelato.digital/)
 
 ![balance](/module_1/balance.png)
 
-You can also see your balance in your wallet.
+you can also see your balance in your wallet.
 
 ![wallet balance](/module_1/wallet-balance.png)
 
-You can also see your deposits history from the bridge UI.
+you can also see your deposits history from the bridge UI.
 
 ![deposits](/module_1/deposits.png)
 
-## Ready to deploy a contract
+::::
 
-Now you're ready to deploy your first contract on Raspberry testnet. Let's head to the next step!
+## ready to deploy a contract
+
+now you're ready to deploy your first contract on Raspberry testnet. let's head to the next step, "deploy your contract" to get started.
