--- a/docs/pages/modules/1/submit.mdx
+++ b/docs/pages/modules/1/submit.mdx
@@ -1,29 +1,42 @@
 ---
-description: Congratulations! Now submit and share your work.
+description: congratulations! now submit and share your work.
 ---
-
-# Submit module 1
-
 import { Button } from 'vocs/components'
 
-## Post about it
+# submit module 1
 
-Congratulations 🎉 you've just deployed a contract, and minted an ERC-721 NFT on a rollup!
+::::steps
 
-Now, let's share your accomplishment with the world. Post a tweet with a screenshot of your NFT and a link to your thirdweb NFT dashboard.
+## post about it
 
-<Button href="https://twitter.com/intent/tweet?text=I just finished module 1 of Modular Academy! Check out my NFT" variant="accent" target="_blank">send tweet</Button>
+congratulations 🎉 you've just deployed a contract, and minted an ERC-721 NFT on a rollup!
 
-## Submit your module
+now, let's share your accomplishment with the world. post a tweet with a screenshot of your NFT and a link to your thirdweb NFT dashboard.
 
-[Submit your tweet link with your EVM address and a link to the mint transaction](https://forms.gle/p4MNauxsz6ijnfjR8) and we'll send you an NFT as a momento of finishing your first module on your journey in the Modular Academy.
+<Button href="https://twitter.com/intent/tweet?text=I just finished module 1 of modular academy! check out my NFT" target="_blank">send tweet</Button>
 
-## Next steps
+if you're not feeling like a tweeter today, that's okay too. just make sure to drop a message in the telegram chat to let everyone know what you've built.
 
-Share your tweet in the telegram chat and see what others are building.
+here's an example message you can copy and paste:
 
-Then head back to the [modules page](/build-whatever) to continue your journey through the Modular Academy.
+"i just finished module 1 of the modular academy! check out my nft: [link to your thirdweb contract dashboard]"
+
+<Button href="https://t.me/modularacademyorg/10" target="_blank">send message</Button>
+
+## submit your module
+
+submit your EVM address and a link to the mint transaction and we'll send you an NFT as a momento of finishing your first module on your journey in the modular academy.
+
+<Button href="https://forms.gle/p4MNauxsz6ijnfjR8" variant="accent" target="_blank">submit</Button>
+
+## next steps
+
+share your module 1 in the telegram chat and see what others are building.
+
+then head back to the [modules page](/build-whatever) to continue your journey through the modular academy.
 
 :::success
-We're working on more modules now for you to continue your journey. Stay tuned!
+we're working on more modules now for you to continue your journey. stay tuned!
 :::
+
+::::
