--- a/docs/pages/modules/1/thirdweb.mdx
+++ b/docs/pages/modules/1/thirdweb.mdx
@@ -1,77 +1,81 @@
 ---
-description: Deploy a smart contract with no code.
+description: deploy a smart contract with no code.
 ---
 
-# Deploying your contract with thirdweb
+# deploying your contract with thirdweb
 
-In this page, we'll learn how to deploy a smart contract on thirdweb with no code. We'll be deploying an ERC-721 smart contract.
+in this page, we'll learn how to deploy a smart contract on thirdweb with no code. we'll be deploying an ERC-721 smart contract.
 
-## Go to thirdweb.com
+::::steps
 
-Visit [the thirdweb dashboard](https://thirdweb.com/dashboard).
+## go to thirdweb.com
 
-## Connect your wallet
+visit [the thirdweb dashboard](https://thirdweb.com/dashboard)
 
-Connect your wallet to thirdweb.
+## connect your wallet
+
+connect your wallet to thirdweb.
 
 ![connect wallet](/module_1/connect.png)
 
-After you connect your wallet, you'll need to sign a message to confirm that you are the owner of the wallet. Click sign in.
+after you connect your wallet, you'll need to sign a message to confirm that you are the owner of the wallet. click sign in.
 
 ![sign message](/module_1/signature.png)
 
-## Pick the contract to deploy
+## pick the contract to deploy
 
-Click on the Deploy button on the dashboard.
+click on the Deploy button on the dashboard.
 
 ![deploy](/module_1/deploy.png)
 
-This will take you to a page where you can pick the contract you want to deploy. Click "Ready-to-deploy".
+this will take you to a page where you can pick the contract you want to deploy. click "Ready-to-deploy".
 
 ![pick contract](/module_1/pick-contract.png)
 
-Then click "NFT Drop" where you'll deploy an ERC-721 smart contract and mint your own token.
+then click "NFT Drop" where you'll deploy an ERC-721 smart contract and mint your own token.
 
 ![nft-contract](/module_1/nft-contract.png)
 
-Read the contract page to understand more about the contract you're deploying.
+read the contract page to understand more about the contract you're deploying.
 
 ![contract page](/module_1/contract-page.png)
 
-## Deploy the contract
+## deploy the contract
 
-Click "Deploy now >>" to deploy the contract.
+click "Deploy now >>" to deploy the contract.
 
-Fill in the details for your contract. We'll leave this exercise to you to complete. Add a photo if you want and check out the other options. Have fun!
+fill in the details for your contract. we'll leave this exercise to you to complete. Add a photo if you want and check out the other options. have fun!
 
 :::tip
-Make sure you're deploying to OP Celestia Raspberry in thirdweb.
+make sure you're deploying to OP Celestia Raspberry in thirdweb.
 
 ![select-right-chain](/module_1/select-right-chain.png)
 :::
 
-You'll have 3 transactions to confirm. Confirm them all.
+you'll have 3 transactions to confirm. confirm them all.
 
-Congratulations! You've deployed your first smart contract on OP Celestia Raspberry with thirdweb and no code!
+congratulations! you've deployed your first smart contract on OP Celestia Raspberry with thirdweb and no code!
 
 ## Upload an NFT
 
-After you're done deploying the contract, you'll need to upload an NFT to the contract.
+after you're done deploying the contract, you'll need to upload an NFT to the contract.
 
-For module 1, we'll do a "Single Upload" and upload one image. After you've uploaded your image and given it a name, description, and other details, click "Lazy Mint NFT".
+for module 1, we'll do a "Single Upload" and upload one image. after you've uploaded your image and given it a name, description, and other details, click "Lazy Mint NFT".
 
-After you've uploaded your NFT, your dashboard will look similar to this:
+once you've uploaded your NFT, your dashboard will look similar to this:
 
 ![nft-uploaded](/module_1/contract-with-nft.png)
 
-## Set claim conditions
+## set claim conditions
 
-Now you're ready to set claim conditions for your NFT. This is where we encourage you to have some fun with your projects. You can set the claim conditions to be anything you want. For example, you can set the claim conditions to be that the user must have a certain amount of $YOURTOKEN in their wallet to claim the NFT.
+now you're ready to set claim conditions for your NFT. this is where we encourage you to have some fun with your projects. you can set the claim conditions to be anything you want. for example, you can set the claim conditions to be that the user must have a certain amount of $YOURTOKEN in their wallet to claim the NFT.
 
-For this example, we're going to set an Only Owner phase for this token, so that you are the only one who can claim it.
+for this example, we're going to set an Only Owner phase for this token, so that you are the only one who can claim it.
 
-Again, play around with the settings if you'd like. When you're ready, click "Save Phases".
+again, play around with the settings if you'd like. when you're ready, click "Save Phases".
 
-After your transaction goes through, you'll see a currently active claim phase for "Only Owner".
+after your transaction goes through, you'll see a currently active claim phase for "Only Owner".
 
 ![only-owner](/module_1/only-owner.png)
+
+::::
