feat: add intro text

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -9,7 +9,8 @@ import { HomePage } from 'vocs/components'
 
 <HomePage.Root>
   <HomePage.Logo />
-  <HomePage.Tagline>build whatever with Celestia underneath ✨</HomePage.Tagline>
+  <h1 className="text-4xl font-bold">welcome to modular academy</h1>
+  <HomePage.Tagline>build whatever with Celestia underneath</HomePage.Tagline>
   <HomePage.Description>from smart contracts to building customized rollups, at your own pace</HomePage.Description>
   <HomePage.Buttons>
     <HomePage.Button href="/build-whatever" variant="accent">get started</HomePage.Button>
